Use immutable map instead of map