@@ -1,5 +1,7 @@
 package com.bhaavan.assignment;
 
+import com.google.common.collect.ImmutableMap;
+
 import java.util.*;
 
 public class RockPaperScissor implements Game {
@@ -43,7 +45,7 @@ public class RockPaperScissor implements Game {
         return Results.WIN;
     }
 
-    Map<Integer, String> map = Map.of(1,"Rock \uD83D\uDC4A", 2, "Paper \uD83D\uDD90", 3, "Scissor ✌");
+    Map<Integer, String> map = ImmutableMap.of(1,"Rock \uD83D\uDC4A", 2, "Paper \uD83D\uDD90", 3, "Scissor ✌");
 
     @Override
     public Results play(Player player1, Player player2) {
